frontend/tests/cases/positive/graded-base/lnl.gr
language GradedBase

f : forall {a : Type} . a % Many -> (a, a)
f x = (x, x)